Fixed layout problems with resizing and grid max-width

--- a/css/main.css
+++ b/css/main.css
@@ -155,7 +155,7 @@ main {
 }
 
 .u-widthMedium {
-  max-width: 1400px;
+  max-width: var(--max-width-content-row);
 }
 
 .u-widthFull {
@@ -318,7 +318,7 @@ p.is-lede {
   /* font-size: var(--font-size-8);
   font-weight: 400; */
   /* line-height: 1.3; */
-  margin: var(--spacing-4) auto 0;
+  margin: 0 auto;
   width: 100%;
 }
 
@@ -328,6 +328,10 @@ p.is-lede {
 
 .PageHeader-description {
   max-width: var(--max-width-text);
+}
+
+.PageHeader .ContentRow + .ContentRow {
+  margin-top: 0;
 }
 
 @media (min-width: 960px) {
@@ -539,14 +543,10 @@ p.is-lede {
       margin-left: auto;
       margin-right: auto;
     }
-    
+
     .ContentRow.u-sidePadding {
       padding-left: 0;
       padding-right: 0;
-    }
-    
-    .ContentRow.u-widthMedium {
-      max-width: none;
     }
 
     .ContentRow-item {
